--- a/src/main/resources/FXML/GameMap.fxml
+++ b/src/main/resources/FXML/GameMap.fxml
@@ -10,7 +10,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.TextField?>
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.SpelbordViewController" stylesheets="@../CSS/MainStyler.css">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.SpelbordView" stylesheets="@../CSS/MainStyler.css">
    <children>
 
       <ImageView preserveRatio="true">
