--- a/src/main/resources/CSS/MainStyler.css
+++ b/src/main/resources/CSS/MainStyler.css
@@ -1,4 +1,5 @@
 #stateField {
    -fx-font: 25px Tahoma;
    -fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0, 0);
+   -fx-background-color: red;
 }
